fix nav on mobile

--- a/src/layouts/global.css
+++ b/src/layouts/global.css
@@ -21,34 +21,6 @@ main {
   max-width: 100%;
 }
 
-nav {
-  padding: 20px 10px;
-}
-
-nav ul {
-  display: flex;
-  gap: 10px;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  list-style: none;
-}
-
-nav li a {
-  display: block;
-  text-decoration: none;
-  color: black;
-  padding: 5px 15px;
-  border-radius: 9999px;
-}
-
-nav li.current a {
-  background: black;
-  color: white;
-}
-
 svg {
   display: block;
   width: 24px;
